# ikuncode-aimcp

./: Cargo.toml  README-en.md  README.md  test_mcp.ps1
.claude/: settings.local.json
.github/workflows/: release.yml
.windsurf/workflows/: superpowers-brainstorming.md  superpowers-code-review.md  superpowers-debugging.md  superpowers-executing-plans.md  superpowers-finishing-branch.md  superpowers-git-worktrees.md  superpowers-parallel-agents.md  superpowers-receiving-review.md  superpowers-tdd.md  superpowers-verification.md  superpowers-writing-plans.md  superpowers.md
npm/: package.json
npm/scripts/: install.js
src/: detection.rs  lib.rs  main.rs  server.rs  shared.rs  transport.rs
src/tools/: codex.rs  gemini.rs  gemini_image_api.rs  mod.rs
src/tools/grok/: config.rs  mod.rs  prompts.rs  provider.rs  tools.rs
tests/: integration.rs
