[package]
name = "ikuncode-aimcp"
version = "0.1.2"
edition = "2021"
rust-version = "1.77.2"
authors = ["missdeer"]
description = "Unified MCP server combining Gemini, Codex, and Grok Search"
license = "GPL-3.0-or-later"
repository = "https://github.com/xuxu777xu/ikuncode-aimcp"

[dependencies]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = ["server", "transport-io", "transport-async-rw"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
anyhow = "1.0"
thiserror = "2"
clap = { version = "4.5", default-features = false, features = ["std", "derive", "help", "usage", "error-context", "wrap_help", "suggestions", "cargo"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
chrono = "0.4"
rand = "0.8"
base64 = "0.22"

which = "7"

[dev-dependencies]
tempfile = "3"
